--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<img
+		<div id="box">
+			<img
 			id="one"
 			src="https://w0.peakpx.com/wallpaper/115/302/HD-wallpaper-naruto-kurama-ninja-thumbnail.jpg"
 			alt=""
@@ -17,6 +18,7 @@
 			src="https://w0.peakpx.com/wallpaper/133/138/HD-wallpaper-sasuke-uchiha-electric-blue-magenta-boruto-naruto-next-generation-anime-anas-ahmed-edits-naruto-boruto-sasuke-susanoo.jpg"
 			alt=""
 		/>
+		</div>
 		<button>swap images</button>
 		<script src="script.js"></script>
 	</body>
