--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 	</head>
 	<body>
 		<div id="box">
-			<img
-			id="one"
-			src="https://w0.peakpx.com/wallpaper/115/302/HD-wallpaper-naruto-kurama-ninja-thumbnail.jpg"
-			alt=""
-		/>
-		<img
-			id="two"
-			src="https://w0.peakpx.com/wallpaper/133/138/HD-wallpaper-sasuke-uchiha-electric-blue-magenta-boruto-naruto-next-generation-anime-anas-ahmed-edits-naruto-boruto-sasuke-susanoo.jpg"
-			alt=""
-		/>
+			<div id="box-one">
+				<img
+					id="one"
+					src="https://w0.peakpx.com/wallpaper/115/302/HD-wallpaper-naruto-kurama-ninja-thumbnail.jpg"
+					alt=""
+				/>
+			</div>
+
+			<div id="box-two">
+				<img
+					id="two"
+					src="https://w0.peakpx.com/wallpaper/133/138/HD-wallpaper-sasuke-uchiha-electric-blue-magenta-boruto-naruto-next-generation-anime-anas-ahmed-edits-naruto-boruto-sasuke-susanoo.jpg"
+					alt=""
+				/>
+			</div>
 		</div>
 		<button>swap images</button>
 		<script src="script.js"></script>
